#2196 Adjust ExpressionModel#containsSingleValueToken() to use ANTLR tokens